Big Gap fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,8 +30,9 @@
   font-size: 0.8rem;
   text-align: center;
   color: var(--gray-color);
-  line-height: 1.5;
-  padding: 4rem 0 1rem 0;
+  padding: 4rem 0;
+
+  background: #fff;
 
   @media screen and (min-width: 2000px) {
     font-size: 1.75rem;
