--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -141,7 +141,7 @@
       svg {
         width: 50%;
         height: 50%;
-        color: var(-white-color);
+        color: var(--white-color);
       }
     }
   }
@@ -161,13 +161,22 @@
     position: absolute;
     padding: 0.5rem 1rem;
     border-radius: 10px;
-    background-color: #fafafa;
+    background-color: #fff;
+    box-shadow: 2px 2px 5px #00000011;
     top: -25px;
 
     &.highlight {
       color: white;
       font-weight: 600;
-      background: linear-gradient(45deg, #f17c58, #e94584, #24aadb, #27dbb1, #ffdc18, #ff3706);
+      background: linear-gradient(
+        45deg,
+        #f17c58,
+        #e94584,
+        #24aadb,
+        #27dbb1,
+        #ffdc18,
+        #ff3706
+      );
       background-size: 600% 100%;
       animation: gradient 7s linear infinite;
       animation-direction: alternate;
